--- a/resources/style.css
+++ b/resources/style.css
@@ -4,11 +4,25 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/*HEADINGS */
+
 .main-header{
     font-weight: normal;
     font-size: 50px;
     color: #ffffff
 }
+
+.middle-header{
+    font-weight: 300;
+    font-size: 42px;
+    color: #ffffff;
+}
+
+.sub-header{
+    font-size: 21px;
+    color: gray;
+}
+/*LINKS*/
 
 .link{
     font-size: 16px;
